<resources>
    <string name="app_name" translatable="false">Madinatic</string>
    <string name="google_map_api_key" translatable="false">AIzaSyC8WnR7zKClh_UUYmzCClP7rwbGmqazlaM</string>

    <string name="unknown_error">Quelque chose s\'est mal passé</string>
    <string name="home">Home</string>
    <string name="declaration">Déclaration</string>
    <string name="profile">Profil</string>
    <string name="login_desc">Veuillez saisir votre nom d\'utilisateur \n et votre mot de passe pour vous connecter</string>
    <string name="email_or_username">E-mail ou nom d\'Utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="login">S\'identifier</string>
    <string name="reset_your_password">Réinitialisez votre mot de passe</string>
    <string name="you_are_new_here">Vous êtes nouveau ici?</string>
    <string name="register">S\'inscrire</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="reset_pass_desc">Nous vous enverrons un e-mail pour réinitialiser votre mot de passe</string>
    <string name="email">E-mail</string>
    <string name="envoyer">Envoyer</string>
    <string name="please_wait">S\'il vous plaît, attendez</string>
    <string name="invalid_email">E-mail non valide</string>
    <string name="invalid_password">Le mot de passe est trop court, doit contenir au moins 8 caractères</string>
    <string name="internet_prblm">Il y a eu un problème vérifiez votre connexion internet</string>
    <string name="login_failure">Email ou mot de passe incorrect</string>

    <string name="op_canceled">Opération annulée</string>
    <string name="plz_patient">S\'il vous plaît, attendez</string>
    <string name="d_ja_memebre">Déja memebre?</string>
    <string name="cr_un_compte">Créé un compte</string>
    <string name="password_match_failure">Les mots de passe ne correspondent pas</string>
    <string name="alredy_signed_failure">Un utilisateur est déjà enregistré avec cette adresse e-mail</string>
    <string name="invalid_pass_failure">C\'est un mot de passe invalide ou trop courant, veuillez en choisir un autre</string>
    <string name="resetpassword_succ">l\'e-mail pour réinitialiser votre mot de passe a été envoyé avec succès, vérifiez votre boîte de réception</string>
    <string name="registration_desc">please fill all information bellow \nto create an acount</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom de famille</string>
    <string name="repeat_password">Répéter le mot de passe</string>
    <string name="national_id">Identifiant national</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="address">Adresse</string>
    <string name="you_already_have_an_acount">Avez vous déjà un compte?</string>
    <string name="fullname_fail">S\'il vous plait entrez votre nom entier</string>
    <string name="invalid_phone">Numéro de téléphone invalide</string>
    <string name="invalid_address">Adresse invalide</string>
    <string name="invalid_nationalID">Identifiant national non valide</string>
    <string name="alredy_signedin">Il existe un compte lié à cette adresse e-mail, essayez de vous connecter</string>
    <string name="reg_succ_title">Demande d\'inscription soumise</string>
    <string name="regi_succ_msg">Nous vous enverrons un e-mail une fois que l\'administrateur aura approuvé votre demande d\'inscription, veuillez vérifier votre boîte de réception e-mail plus tard</string>
    <string name="close">Fermer</string>
    <string name="madina_tic">MADINA TIC</string>
    <string name="date_of_birth">date de naissance</string>
    <string name="invalid_date">date invalide</string>
    <string name="all_declaration">Toutes les déclarations</string>
    <string name="updates">Mises à jour</string>
    <string name="announce">Annonce</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="invalid_firstname">Prénom invalide</string>
    <string name="invalid_lastname">Nom invalide</string>
    <string name="editinfo_succ">Données enregistrées avec succès</string>
    <string name="old_password">Ancien mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="new_password_repear">Répété le nouveau mot de passe</string>
    <string name="change_your_password">Changez votre mot de passe</string>
    <string name="updatepass_succ">Mot de passe mis à jour avec succès</string>
    <string name="invalid_newpass">Mot de passe invalide</string>
    <string name="upload_a_file_doc_pdf">Télécharger un fichier (doc,pdf,txt)</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="location">Emplacement</string>
    <string name="add_declaration">Ajouter une déclaration</string>
    <string name="upload_img">Télécharger des images</string>
    <string name="permi_titel">Autorisation nécessaire</string>
    <string name="permi_msg">Madina-tic besoin d\'autorisations de stockage pour télécharger des fichiers pdf</string>
    <string name="upload_permission_denied">vous ne pouvez pas télécharger des fichiers, permission refusée</string>
    <string name="type_dec">Type de déclaration</string>
    <string name="title_empty">Le titre ne doit pas être vide</string>
    <string name="desc_empty">La description ne doit pas être vide</string>
    <string name="images_empty">Téléchargez au moins une image</string>
    <string name="location_empty">Veuillez préciser l\'emplacement</string>
    <string name="sub_msg">Votre déclaration a été soumise avec succès, nous vous enverrons un e-mail une fois votre demande traitée </string>
    <string name="sub_title">Déclaration soumise</string>
    <string name="categorie_empty">Veuillez sélectionner le type de déclaration</string>
    <string name="documents">Les documents</string>
    <string name="declaration_information">Informations de déclaration</string>
    <string name="max_doc_fail">le nombre maximum de documents est cinq</string>
    <string name="patience_please">Veuillez patienter pendant que nous téléchargeons tous les documents</string>
    <string name="location_gps_fail">Nous ne pouvons pas sélectionner l\'emplacement, veuillez activer le gps</string>
    <string name="read_more">Lire la suite</string>
    <string name="validated">Validé</string>
    <string name="archived">Archivé</string>
    <string name="not_valid">Pas encore validé</string>
    <string name="under_trait">Sous traitement</string>
    <string name="treated">Traité</string>
    <string name="refused">Refusé</string>
    <string name="leack_info">Manque d\'informations</string>
    <string name="logout">Se déconnecter</string>
    <string name="no_internet">Pas de connexion Internet</string>
    <string name="there_is_no_documents_in_this_declaration">il n\'y a aucun document dans \ncette déclaration</string>
    <string name="edit_your_information">Modifier vos informations</string>
    <string name="all_your_dec">Toutes vos déclarations</string>
    <string name="add_doc">Ajouter un document</string>
    <string name="declaration_need_update">Les déclarations doivent être mises à jour</string>
    <string name="no_declaration_is_submitted_yet">Aucune déclaration n\'est encore soumise</string>
    <string name="all_dec_updated">Toutes les déclarations sont mises à jour</string>
    <string name="no_dec">Vous n\'avez pas encore soumis de déclaration</string>
    <string name="update">Mise à jour</string>
    <string name="update_dec">Mise à jour de déclaration</string>
    <string name="delete_this_declaration">Supprimer cette déclaration</string>
    <string name="delete_dec_title">Supprimer la déclaration</string>
    <string name="delete_doc_title">Supprimer le document</string>
    <string name="delete_dec_msg">Cette opération ne peut pas être annulée, vous êtes sûr de vouloir supprimer cette déclaration?</string>
    <string name="delete_doc_msg">Cette opération ne peut pas être annulée, vous êtes sûr de vouloir supprimer cette document?</string>
    <string name="delete">Supprimer</string>
    <string name="announce_email">E-mail</string>
    <string name="contact">Contact</string>
    <string name="announce_phone">Téléphone</string>
    <string name="empty_announce">Il n\'y a aucune annonce ici</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="userNotApproved">Utilisateur non approuvé</string>
    <string name="d_poser">Déposer</string>
    <string name="draft">Brouillon</string>

    <string-array name="doc_options">
        <item>Télécharger des photos</item>
        <item>télécharger des fichiers</item>
    </string-array>

    <string-array name="ordering">
        <item>Aléatoire</item>
        <item>Nouveau à ancien</item>
        <item>Ancien à nouveau</item>
    </string-array>

    <string-array name="announce">
        <item>Courant</item>
        <item>A venir</item>
        <item>Anciennes annonces</item>
        <item>Toutes</item>
    </string-array>
</resources>
