<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/login_desc"
                android:textColor="@color/subtitleTextColor"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:gravity="center"
                android:background="#E7E6E6"
                android:layout_marginEnd="32dp">
                <ImageView
                        android:layout_marginTop="2dp"
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/email_outline"/>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:ems="10"
                        android:hint="@string/email_or_username"
                        android:inputType="textEmailAddress"
                        android:textAlignment="viewStart" />
            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:gravity="center"
                    android:background="#E7E6E6"
                    android:layout_marginEnd="32dp">
                    <ImageView
                        android:layout_marginTop="2dp"
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/lock_outline"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textEmailAddress"
                        android:textAlignment="viewStart" />
                </LinearLayout>

            <com.google.android.material.button.MaterialButton
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/login"
                    android:textColor="#FFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/reset_your_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/subtitleTextColor"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                tools:layout_editor_absoluteX="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0"
                android:text="@string/you_are_new_here"
                android:textColor="@color/subtitleTextColor" />

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/subtitleTextColor"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                tools:layout_editor_absoluteX="12dp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="16dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:text="@string/register"
            android:textColor="#FFF"
            app:backgroundTint="@color/secondaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>